Fix non-responsive Archer logo on mobile landing page

--- a/static/css/onebar.css
+++ b/static/css/onebar.css
@@ -3,7 +3,7 @@
 }
 
 #large-archer-logo {
-    height: 7em;
+    max-height: 10em;
 }
 
 #large-c4ads-logo {
